@@ -2,6 +2,8 @@ License: Unknown, but free downloadable. Probably GPL.
 
 TODO: add 'click' touch gesture.
 
+- Improved pan_touch, introduced PAN_MINIMUM. Now we can click!
+- Set animate: false on L41 to prevent jerkyness.
 - Changed line 31: commented out if, because getZoom does not exist on
   that level.
 
